--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/style.css">
     <title>Document</title>   
 </head>
@@ -25,14 +26,12 @@
                     </div>
 
                      <div class="messaage-area">
-                        <textarea id="textarea" class="note-item" name="note-item" rows="5" cols="33"
+                        <textarea id="textarea" class="form-item" name="form-item" rows="5" cols="33"
                         placeholder="Enter your name, email, message and click send!"></textarea>
                     </div>
-
                     <div class="send-button">
                         <input type="submit" value="Send" />
                     </div>
-                    
                 </form>
             </div>
         </div>
